another set of examples that I've completed so far up to now

--- a/indexFunctions1.html
+++ b/indexFunctions1.html
@@ -16,7 +16,7 @@
 // the myFunction function that has each of the p1 and p2 parameters inside of it's parentheses
 function myFunction(p1, p2) {
 
-  // the line of code that is returning the value of p1 and p2 that are being multiplied by the * operator
+  // the line of code inside of the myFunction function that is returning the value of p1 and p2 that are being multiplied by the * operator
   return p1 * p2;
 }
 
